# Voice_Agent_

./: .env.example  .env.prod  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  livekit.yaml  package-lock.json  package.json  pyproject.toml  server.js  test_lk.py
.agent/: manifest.json
.claude/: launch.json
.playwright-mcp/: page-2026-06-25T12-58-27-319Z.yml  page-2026-06-25T13-02-03-389Z.yml  page-2026-06-26T05-20-31-183Z.yml
.serena/: project.yml
app/: languages.py
cache/: keys.js
data/: communications.json  email_templates.json  work_orders.json
db/: clear_metrics.js  migrate.js  seed.js
docs/: email-agent-flow.excalidraw  system-card.md  voice-agent-flow.excalidraw
email_agent_app/: Dockerfile  package.json  server.js
frontend/: communications.html  email.html  index.html  landing.html  observability.html  package-lock.json  package.json  vite.config.js  work-orders.html
nginx/: default.conf
ops/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
prompts/: system_prompt.txt
public/: app.js  communications.html  communications.js  customers.html  customers.js  email.html  email.js  index.html  landing.html  observability.html  observability.js  shared.js  style.css  work-orders.html  work-orders.js
resources/: README.md
tests/: README.md
ui/: package-lock.json  package.json  vite.config.js
voice_agent/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  agent.py  agent_realtime.py  agent_voice_live.py  cdb_tools.py  langfuse_setup.py  server.py  (+5 more)
(+169 files in other folders)
