[project]
name = "voice-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[azure,openai]>=1.0.0",
    "livekit>=1.0.0",
    "python-dotenv>=1.0.0",
    "livekit-plugins-silero>=1.6.2",
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "langfuse>=4.9.1",
    "boto3>=1.34.0",
    "psycopg[binary]>=3.2.0",
]

